fixed some styling on tables; improved readability in html code; linked books and authors to individual views

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -298,11 +298,12 @@ table tr td {
 table {
   /* height: inherit; */
   display: block;
-  overflow: scroll;
+  overflow-y: scroll;
 
 }
 .title {
   font-style: italic;
+  text-align: justify;
 }
 /*******************************************/
 /*! MY BUTTONS
